src/pages/Login/Login.module.scss
.Wrapper {
  display: flex;
  flex-flow: row-reverse wrap;
  align-content: center;

  height: 100vh;
  background: var(--color-primary);

  @media (min-width: 400px) {
    align-content: initial;
    padding: 0 8vw;
  }
}

.Meta {
  display: none;

  @media (min-width: 900px) {
    display: block;
  }
}

.Form {
  display: flex;
  flex-flow: column nowrap;
  align-content: center;
  min-width: min(100%, 55ch);

  padding: 2em;
  padding-top: 8%;
  background: var(--color-background);
}

.Form > h1 {
  margin: 0.5rem 0;
  font-size: 3em;
  font-weight: 500;
}

.Form > h2 {
  font-size: 1.2rem;
}

.Separator {
  margin: 1rem 0;
}

